refactor: 우승 정보 도메인 사용하도록 수정